feat: apply acknowledgement of service rename (CMC-1271) (#720)