@@ -12,29 +12,33 @@ import uk.gov.hmcts.reform.unspec.callback.CaseEvent;
 import uk.gov.hmcts.reform.unspec.model.CaseData;
 import uk.gov.hmcts.reform.unspec.model.common.Element;
 import uk.gov.hmcts.reform.unspec.model.documents.CaseDocument;
-import uk.gov.hmcts.reform.unspec.service.docmosis.aos.AcknowledgementOfServiceGenerator;
+import uk.gov.hmcts.reform.unspec.service.docmosis.aos.AcknowledgementOfClaimGenerator;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 import static uk.gov.hmcts.reform.unspec.callback.CallbackParams.Params.BEARER_TOKEN;
 import static uk.gov.hmcts.reform.unspec.callback.CallbackType.ABOUT_TO_SUBMIT;
+import static uk.gov.hmcts.reform.unspec.callback.CaseEvent.GENERATE_ACKNOWLEDGEMENT_OF_CLAIM;
 import static uk.gov.hmcts.reform.unspec.callback.CaseEvent.GENERATE_ACKNOWLEDGEMENT_OF_SERVICE;
 import static uk.gov.hmcts.reform.unspec.utils.ElementUtils.element;
 
 @Service
 @RequiredArgsConstructor
-public class GenerateAcknowledgementOfServiceCallbackHandler extends CallbackHandler {
+public class GenerateAcknowledgementOfClaimCallbackHandler extends CallbackHandler {
 
-    private static final List<CaseEvent> EVENTS = Collections.singletonList(GENERATE_ACKNOWLEDGEMENT_OF_SERVICE);
+    private static final List<CaseEvent> EVENTS = List.of(
+        //TODO: CMC-1271 backwards compatibility
+        GENERATE_ACKNOWLEDGEMENT_OF_SERVICE,
+        GENERATE_ACKNOWLEDGEMENT_OF_CLAIM
+    );
 
-    private final AcknowledgementOfServiceGenerator acknowledgementOfServiceGenerator;
+    private final AcknowledgementOfClaimGenerator acknowledgementOfClaimGenerator;
     private final ObjectMapper objectMapper;
 
     @Override
     protected Map<String, Callback> callbacks() {
-        return Map.of(callbackKey(ABOUT_TO_SUBMIT), this::prepareAcknowledgementOfService);
+        return Map.of(callbackKey(ABOUT_TO_SUBMIT), this::prepareAcknowledgementOfClaim);
     }
 
     @Override
@@ -42,17 +46,17 @@ public class GenerateAcknowledgementOfServiceCallbackHandler extends CallbackHan
         return EVENTS;
     }
 
-    private CallbackResponse prepareAcknowledgementOfService(CallbackParams callbackParams) {
+    private CallbackResponse prepareAcknowledgementOfClaim(CallbackParams callbackParams) {
         CaseData caseData = callbackParams.getCaseData();
         CaseData.CaseDataBuilder caseDataBuilder = caseData.toBuilder();
 
-        CaseDocument acknowledgementOfService = acknowledgementOfServiceGenerator.generate(
+        CaseDocument acknowledgementOfClaim = acknowledgementOfClaimGenerator.generate(
             caseData,
             callbackParams.getParams().get(BEARER_TOKEN).toString()
         );
 
         List<Element<CaseDocument>> systemGeneratedCaseDocuments = caseData.getSystemGeneratedCaseDocuments();
-        systemGeneratedCaseDocuments.add(element(acknowledgementOfService));
+        systemGeneratedCaseDocuments.add(element(acknowledgementOfClaim));
         caseDataBuilder.systemGeneratedCaseDocuments(systemGeneratedCaseDocuments);
 
         return AboutToStartOrSubmitCallbackResponse.builder()
